--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
   width: 100%;
   background: rgba(0, 0, 0, 0.3);
   border-radius: 10px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   cursor: pointer;
   overflow: hidden;
 }
@@ -117,4 +117,12 @@ body {
   color: #fff;
   transform: scale(1.3);
   text-align: center;
+}
+.time {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.6);
 }
